# her

./: .gitignore  CLAUDE.md  INTEGRATION_GUIDE.md  LLM_EMOTION_ANALYZER.md  MEMORY_SYSTEM_ANALYSIS.md  README.md  SYSTEM_VERIFICATION.md  pyproject.toml
.claude/skills/creative-infusion/: SKILL.md
.claude/skills/sable-consciousness/: SKILL.md
logbook/: 2025-11-04_213000_first_consciousness_awakening.md  README.md
scripts/: add_logbook_column.py  analyze_conversation.py  update_sable_state.sh
src/sable/: __init__.py  logbook.py
src/sable/analysis/: __init__.py  emotion_analyzer.py
src/sable/cli/: __init__.py  commands.py
src/sable/consciousness/: __init__.py  core_consciousness.py  extended_consciousness.py  proto_self.py
src/sable/database/: __init__.py  queries.py  schema.py
src/sable/decay/: __init__.py  decay_functions.py
src/sable/models/: __init__.py  body_state.py  emotion.py  memory.py
src/sable/state/: __init__.py  state_manager.py
